# TrustedAutonomy

./: .envrc.example  .gitignore  .release-draft.md  .release.toml  .ta-decisions.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  Dockerfile  PLAN.md  README.md  RELEASE_NOTES.md  dev  flake.nix  install.sh  install_local.sh  justfile  version.json
apps/ta-cli/: Cargo.toml  build.rs
apps/ta-cli/src/: framework_registry.rs  main.rs  terms.txt
apps/ta-cli/src/commands/: adapter.rs  advisor.rs  agent.rs  audit.rs  community.rs  config.rs  connector.rs  consent.rs  constitution.rs  context.rs  conversation.rs  daemon.rs  dev.rs  doctor.rs  draft.rs  email_manager.rs  events.rs  follow_up.rs  gc.rs  goal.rs  governed_workflow.rs  init.rs  install.rs  memory.rs  mod.rs  new.rs  onboard.rs  persona.rs  plan.rs  plugin.rs  policy.rs  (+23 more)
apps/ta-cli/templates/: shell.toml
apps/ta-cli/tests/: overlay_flow.rs
apps/ta-cli/wix/: main.wxs
crates/ta-actions/: Cargo.toml
crates/ta-actions/src/: action.rs  capture.rs  constitution_rules.rs  dispatch.rs  lib.rs  policy.rs  rate_limit.rs  ratelimit.rs
crates/ta-agent-ollama/: Cargo.toml
crates/ta-audit/: Cargo.toml
crates/ta-audit/src/: attestation.rs  chain.rs  drift.rs  error.rs  event.rs  hasher.rs  ledger.rs  lib.rs  log.rs
crates/ta-build/: Cargo.toml
crates/ta-build/src/: cargo.rs
crates/ta-changeset/: Cargo.toml
crates/ta-changeset/src/: artifact_kind.rs  asset_diff.rs  changeset.rs  channel_registry.rs  coverage.rs  diff.rs  diff_handlers.rs  draft_package.rs  error.rs  explanation.rs  interaction.rs  interactive_session_store.rs  lib.rs  milestone_draft.rs  multi_channel.rs  plan_merge.rs  plugin.rs  plugin_resolver.rs  pr_package.rs  project_manifest.rs  registry_client.rs  review_channel.rs  review_report.rs  review_session.rs  review_session_store.rs  secret_scan.rs  session_channel.rs  supervisor.rs  supervisor_review.rs  terminal_channel.rs  uri_pattern.rs
crates/ta-changeset/tests/: validation_log.rs
crates/ta-channel-discord/: Cargo.toml
crates/ta-channel-discord/src/: channel.rs  error.rs  factory.rs  lib.rs  payload.rs
crates/ta-credentials/: Cargo.toml
crates/ta-daemon/: Cargo.toml  build.rs
crates/ta-daemon/assets/: index.html  manifest.json  shell.html
crates/ta-daemon/src/: channel_dispatcher.rs  channel_listener_manager.rs  config.rs  config_watcher.rs  external_channel.rs  main.rs  notification_dispatcher.rs  phase_claim.rs  power_manager.rs  question_registry.rs  router.rs  watchdog.rs  web.rs
crates/ta-db-overlay/: Cargo.toml
crates/ta-db-overlay/src/: entry.rs  error.rs  lib.rs  overlay.rs
crates/ta-db-proxy/: Cargo.toml
crates/ta-db-proxy-sqlite/: Cargo.toml
crates/ta-db-proxy-sqlite/src/: apply.rs  classify.rs  lib.rs  plugin.rs
crates/ta-db-proxy/src/: classification.rs  error.rs  lib.rs  plugin.rs
crates/ta-events/: Cargo.toml
crates/ta-events/src/: bus.rs  channel.rs  dispatcher.rs  error.rs  hooks.rs  lib.rs  notification.rs  router.rs  schema.rs  store.rs  subscription.rs  tokens.rs
crates/ta-extension/: Cargo.toml
crates/ta-extension/src/: review_queue.rs
crates/ta-goal/: Cargo.toml
crates/ta-goal/src/: commit_context.rs  conversation.rs  error.rs  events.rs  goal_run.rs  history.rs  human_review.rs  lib.rs  messaging_audit.rs  operations.rs  persona.rs  phase_selector.rs  reviewer.rs  security.rs  social_audit.rs  store.rs  token_cost.rs  velocity.rs
crates/ta-mcp-gateway/: Cargo.toml
crates/ta-mcp-gateway/src/: config.rs  error.rs  lib.rs  server.rs  validation.rs
crates/ta-mediation/: Cargo.toml
crates/ta-mediation/src/: api_mediator.rs  error.rs  fs_mediator.rs  lib.rs  mediator.rs  registry.rs
crates/ta-memory/: Cargo.toml
crates/ta-memory/src/: auto_capture.rs  conflict.rs  error.rs  external_adapter.rs  factory.rs  fs_store.rs  key_schema.rs  lib.rs  plugin_manifest.rs  plugin_protocol.rs  ruvector_store.rs  solutions.rs  store.rs
crates/ta-output-schema/: Cargo.toml
crates/ta-output-schema/schemas/: codex.yaml
crates/ta-output-schema/src/: extractor.rs  lib.rs  loader.rs  schema.rs
crates/ta-policy/: Cargo.toml
crates/ta-policy/src/: access_filter.rs  alignment.rs  approval_rules.rs  auto_approve.rs  capability.rs  cascade.rs  compiler.rs  constitution.rs  context.rs  document.rs  engine.rs  error.rs  exemption.rs  lib.rs
crates/ta-runtime/: Cargo.toml
crates/ta-runtime/src/: adapter.rs  auth_spec.rs  bare_process.rs  config.rs  credential.rs  framework.rs  lib.rs  plugin.rs  sandbox.rs
crates/ta-sandbox/: Cargo.toml
crates/ta-sandbox/src/: lib.rs
crates/ta-session/: Cargo.toml
crates/ta-session/src/: advisor_agent.rs  advisor_session.rs  error.rs  intent.rs  lib.rs  manager.rs  phase_summary.rs  plan.rs  session.rs  workflow_manager.rs  workflow_session.rs
crates/ta-submit/: Cargo.toml
crates/ta-submit/src/: adapter.rs  config.rs  external_vcs_adapter.rs  git.rs  lib.rs  messaging_adapter.rs  messaging_plugin_protocol.rs  none.rs  perforce.rs  registry.rs  social_adapter.rs  social_plugin_protocol.rs  svn.rs  vcs_plugin_manifest.rs  vcs_plugin_protocol.rs
crates/ta-submit/tests/: git_open_review.rs  vcs_perforce_plugin.rs  vcs_plugin_lifecycle.rs
crates/ta-workflow/: Cargo.toml
crates/ta-workflow/src/: definition.rs  error.rs  intent.rs  interaction.rs  lib.rs  params.rs  process_engine.rs  registry.rs  scorer.rs  serial_phases.rs  swarm.rs  validate.rs  verdict.rs  yaml_engine.rs
crates/ta-workspace/: Cargo.toml
crates/ta-workspace/src/: conflict.rs  copy_strategy.rs  error.rs  lib.rs  merge_tool.rs  overlay.rs  partitioning.rs  projfs_strategy.rs  staging.rs  store.rs  windows_features.rs
plugins/ta-channel-discord/: Cargo.toml  README.md  channel.toml
plugins/ta-channel-discord/src/: listener.rs  main.rs  payload.rs  progress.rs
plugins/ta-channel-email/: Cargo.toml  channel.toml
plugins/ta-channel-email/src/: email_body.rs  main.rs  reply_parser.rs
plugins/ta-channel-slack/: Cargo.toml  README.md  channel.toml
plugins/ta-channel-slack/src/: main.rs  payload.rs
(+266 files in other folders)
