[workspace]
resolver = "2"
exclude = [
    "plugins/ta-channel-discord",
    "plugins/ta-channel-slack",
    "plugins/ta-channel-email",
    "plugins/messaging/ta-messaging-gmail",
    "plugins/messaging/ta-messaging-outlook",
    "plugins/messaging/ta-messaging-imap",
    "plugins/social/ta-social-linkedin",
    "plugins/social/ta-social-x",
    "plugins/social/ta-social-buffer",
]
members = [
    "crates/ta-audit",
    "crates/ta-changeset",
    "crates/ta-daemon",
    "crates/ta-goal",
    "crates/ta-mcp-gateway",
    "crates/ta-policy",
    "crates/ta-sandbox",
    "crates/ta-submit",
    "crates/ta-workspace",
    "crates/ta-credentials",
    "crates/ta-memory",
    "crates/ta-mediation",
    "crates/ta-session",
    "crates/ta-events",
    "crates/ta-workflow",
    "crates/ta-build",
    "crates/ta-output-schema",
    "crates/ta-runtime",
    "crates/ta-actions",
    "crates/ta-db-overlay",
    "crates/ta-db-proxy",
    "crates/ta-db-proxy-sqlite",
    "crates/ta-connectors/fs",
    "crates/ta-connectors/web",
    "crates/ta-connectors/mock-drive",
    "crates/ta-connectors/mock-gmail",
    "crates/ta-connectors/slack",
    "crates/ta-connectors/discord",
    "crates/ta-connectors/email",
    "crates/ta-connectors/unreal",
    "crates/ta-connectors/comfyui",
    "crates/ta-connectors/unity",
    "apps/ta-cli",
    "crates/ta-agent-ollama",
    "crates/ta-extension",
]

# Single source of truth for all crate versions.
# Each crate's Cargo.toml uses `version.workspace = true` to inherit this.
[workspace.package]
version = "0.15.27-alpha"

# Shared dependency versions — crate Cargo.tomls use `dep.workspace = true`
# to inherit these versions, keeping everything in sync across all crates.
[workspace.dependencies]
# Serialization — serde is Rust's universal serialization framework.
# The "derive" feature lets us annotate structs with #[derive(Serialize, Deserialize)].
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling — thiserror generates Error trait implementations from enums.
# anyhow is used in binaries for ergonomic error propagation with context.
thiserror = "2"
anyhow = "1"

# Hashing — SHA-256 from the RustCrypto project (pure Rust, no C dependencies).
sha2 = "0.10"

# IDs — UUID v4 (random) for event/changeset identifiers.
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps — timezone-aware date/time with serde support.
chrono = { version = "0.4", features = ["serde"] }

# Structured logging — tracing is the standard for async-aware structured logging in Rust.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Glob pattern matching — used for capability resource patterns (e.g., "fs://workspace/**").
glob = "0.3"

# Async runtime — only needed by ta-daemon; library crates stay synchronous.
tokio = { version = "1", features = ["full"] }

# CLI argument parsing — derive macro for declarative CLI definitions.
clap = { version = "4", features = ["derive"] }

# MCP SDK — Model Context Protocol server implementation (official Rust SDK).
# transport-async-rw enables serving over any AsyncRead+AsyncWrite (Unix sockets, TCP).
rmcp = { version = "0.14", features = ["server", "transport-io", "transport-async-rw"] }

# TLS support — used by ta-daemon's TCP transport for encrypted remote agents (v0.13.2).
tokio-rustls = "0.26"
rustls-pemfile = "2"

# JSON Schema generation — used by rmcp for MCP tool parameter schemas.
schemars = "1"

# YAML configuration parsing — used for agent launch configs.
serde_yaml = "0.9"

# Regex — configurable plan format parsing (v0.3.1.1).
regex = "1"

# PTY support — raw libc bindings for openpty/fork/exec.
libc = "0.2"

# Web framework — minimal async HTTP server for the review web UI (v0.5.2).
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# TOML config parsing — used for daemon.toml and shell.toml (v0.9.7).
toml = "0.8"

# Random number generation — used for auth token generation (v0.9.7).
rand = "0.8"

# Stream utilities — used for SSE event streams (v0.9.7).
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# HTTP client — used by `ta shell` to talk to the daemon API (v0.9.8).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }

# Line editing — readline-style REPL for `ta shell --classic` (v0.9.8).
rustyline = "15"

# TUI — full terminal UI for `ta shell` (v0.9.8.3).
ratatui = "0.29"
crossterm = { version = "0.28", features = ["bracketed-paste"] }

# File system notifications — config hot-reload (v0.10.18).
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

# Binary discovery — resolves .cmd/.bat wrappers on Windows (v0.13.4).
which = "7"

# SQLite — bundled build (no system sqlite3 required) for db proxy plugin (v0.13.5).
rusqlite = { version = "0.31", features = ["bundled"] }

# Platform directory resolution — XDG/macOS/Windows config dir paths (v0.13.8).
dirs = "5"

# Cryptographic signatures — Ed25519 for audit log attestation (v0.14.1).
ring = "0.17"

# Base64 encoding — for attestation signature encoding (v0.14.1).
base64 = "0.22"

# Clipboard access — synchronous OS clipboard read/write without external tools (v0.14.9.3).
# Replaces the subprocess approach (pbpaste/xclip/xsel) which raced against terminal events.
# On headless environments (no display server), Clipboard::new() returns Err and we handle
# the failure gracefully (return None / no-op).
arboard = "3"

# Testing utilities
tempfile = "3"
