[package]
name = "ta-cli"
version = "0.2.0-alpha"
edition = "2021"
description = "CLI for goals, PR review, and approvals in Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "review", "staging"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ta"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }

# Internal crates
ta-audit = { path = "../../crates/ta-audit" }
ta-changeset = { path = "../../crates/ta-changeset" }
ta-connector-fs = { path = "../../crates/ta-connectors/fs" }
ta-goal = { path = "../../crates/ta-goal" }
ta-mcp-gateway = { path = "../../crates/ta-mcp-gateway" }
ta-policy = { path = "../../crates/ta-policy" }
ta-submit = { path = "../../crates/ta-submit" }
ta-workspace = { path = "../../crates/ta-workspace" }

[dev-dependencies]
tempfile = { workspace = true }
