[package]
name = "ta-cli"
version.workspace = true
edition = "2021"
description = "CLI for goals, PR review, and approvals in Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "review", "staging"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ta"
path = "src/main.rs"

[features]
default = []
ruvector = ["ta-memory/ruvector"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true }
rustyline = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }

# Internal crates
ta-audit = { path = "../../crates/ta-audit" }
ta-credentials = { path = "../../crates/ta-credentials" }
ta-memory = { path = "../../crates/ta-memory" }
ta-changeset = { path = "../../crates/ta-changeset" }
ta-connector-fs = { path = "../../crates/ta-connectors/fs" }
ta-goal = { path = "../../crates/ta-goal" }
ta-mcp-gateway = { path = "../../crates/ta-mcp-gateway" }
ta-policy = { path = "../../crates/ta-policy" }
ta-mediation = { path = "../../crates/ta-mediation" }
ta-session = { path = "../../crates/ta-session" }
ta-events = { path = "../../crates/ta-events" }
ta-submit = { path = "../../crates/ta-submit" }
ta-workspace = { path = "../../crates/ta-workspace" }
ta-workflow = { path = "../../crates/ta-workflow" }

[dev-dependencies]
tempfile = { workspace = true }
