[package]
name = "ta-cli"
version.workspace = true
edition = "2021"
description = "CLI for goals, PR review, and approvals in Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "review", "staging"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ta"
path = "src/main.rs"

[features]
default = ["ruvector"]
ruvector = ["ta-memory/ruvector"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true }
rustyline = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
which = { workspace = true }
arboard = { workspace = true }

# Internal crates — version kept in sync with workspace by bump-version.sh
ta-audit = { path = "../../crates/ta-audit", version = "0.15.28-alpha.1" }
ta-credentials = { path = "../../crates/ta-credentials", version = "0.15.28-alpha.1" }
ta-memory = { path = "../../crates/ta-memory", version = "0.15.28-alpha.1" }
ta-changeset = { path = "../../crates/ta-changeset", version = "0.15.28-alpha.1" }
ta-connector-fs = { path = "../../crates/ta-connectors/fs", version = "0.15.28-alpha.1" }
ta-connector-unreal = { path = "../../crates/ta-connectors/unreal", version = "0.15.28-alpha.1" }
ta-connector-comfyui = { path = "../../crates/ta-connectors/comfyui", version = "0.15.28-alpha.1" }
ta-connector-unity = { path = "../../crates/ta-connectors/unity", version = "0.15.28-alpha.1" }
ta-goal = { path = "../../crates/ta-goal", version = "0.15.28-alpha.1" }
ta-mcp-gateway = { path = "../../crates/ta-mcp-gateway", version = "0.15.28-alpha.1" }
ta-policy = { path = "../../crates/ta-policy", version = "0.15.28-alpha.1" }
ta-mediation = { path = "../../crates/ta-mediation", version = "0.15.28-alpha.1" }
ta-session = { path = "../../crates/ta-session", version = "0.15.28-alpha.1" }
ta-events = { path = "../../crates/ta-events", version = "0.15.28-alpha.1" }
ta-submit = { path = "../../crates/ta-submit", version = "0.15.28-alpha.1" }
ta-workspace = { path = "../../crates/ta-workspace", version = "0.15.28-alpha.1" }
ta-workflow = { path = "../../crates/ta-workflow", version = "0.15.28-alpha.1" }
ta-build = { path = "../../crates/ta-build", version = "0.15.28-alpha.1" }
ta-output-schema = { path = "../../crates/ta-output-schema", version = "0.15.28-alpha.1" }
ta-runtime = { path = "../../crates/ta-runtime", version = "0.15.28-alpha.1" }


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
