[package]
name = "ta-changeset"
version = "0.1.0"
edition = "2021"
description = "ChangeSet and PR Package data model for Trusted Autonomy"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
