[package]
name = "ta-changeset"
version = "0.4.3-alpha"
edition = "2021"
description = "ChangeSet and PR Package data model for Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
