[package]
name = "ta-channel-discord"
version.workspace = true
edition = "2021"
description = "Native Discord ReviewChannel for Trusted Autonomy draft review"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ta-changeset = { path = "../ta-changeset" }

[dev-dependencies]
tempfile = { workspace = true }
