[package]
name = "ta-daemon"
version = "0.7.5-alpha"
edition = "2021"
description = "MCP server daemon for Trusted Autonomy"
license = "Apache-2.0"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

# Internal crates
ta-mcp-gateway = { path = "../ta-mcp-gateway" }
ta-changeset = { path = "../ta-changeset" }
ta-memory = { path = "../ta-memory" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
