[package]
name = "ta-daemon"
version.workspace = true
edition = "2021"
description = "MCP server daemon and HTTP API for Trusted Autonomy"
license = "Apache-2.0"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
rmcp = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
async-stream = { workspace = true }

# Internal crates
ta-mcp-gateway = { path = "../ta-mcp-gateway" }
ta-changeset = { path = "../ta-changeset" }
ta-memory = { path = "../ta-memory" }
ta-events = { path = "../ta-events" }
ta-goal = { path = "../ta-goal" }
ta-policy = { path = "../ta-policy" }
ta-connector-slack = { path = "../ta-connectors/slack" }
ta-connector-discord = { path = "../ta-connectors/discord" }
ta-connector-email = { path = "../ta-connectors/email" }
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
