[package]
name = "ta-daemon"
version.workspace = true
edition = "2021"
description = "MCP server daemon and HTTP API for Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "daemon", "mcp"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
rmcp = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
async-stream = { workspace = true }
sha2 = { workspace = true }

# Internal crates
ta-mcp-gateway = { path = "../ta-mcp-gateway", version = "0.15.24-alpha.4" }
ta-changeset = { path = "../ta-changeset", version = "0.15.24-alpha.4" }
ta-memory = { path = "../ta-memory", version = "0.15.24-alpha.4" }
ta-events = { path = "../ta-events", version = "0.15.24-alpha.4" }
ta-goal = { path = "../ta-goal", version = "0.15.24-alpha.4" }
ta-audit = { path = "../ta-audit", version = "0.15.24-alpha.4" }
ta-policy = { path = "../ta-policy", version = "0.15.24-alpha.4" }
ta-connector-slack = { path = "../ta-connectors/slack", version = "0.15.24-alpha.4" }
ta-connector-email = { path = "../ta-connectors/email", version = "0.15.24-alpha.4" }
reqwest = { workspace = true }
ta-output-schema = { path = "../ta-output-schema", version = "0.15.24-alpha.4" }
ta-extension = { path = "../ta-extension", version = "0.15.24-alpha.4" }
ta-session = { path = "../ta-session", version = "0.15.24-alpha.4" }
which = "7"
libc = { workspace = true }
async-trait = "0.1"
notify = { workspace = true }
# TLS transport support (v0.13.2).
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
