[package]
name = "ta-db-proxy-sqlite"
version.workspace = true
edition = "2021"
description = "SQLite proxy plugin for Trusted Autonomy database governance"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }

ta-db-overlay = { path = "../ta-db-overlay" }
ta-db-proxy = { path = "../ta-db-proxy" }

[dev-dependencies]
tempfile = { workspace = true }
