[package]
name = "ta-db-proxy-sqlite"
version.workspace = true
edition = "2021"
description = "SQLite proxy plugin for Trusted Autonomy database governance"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "sqlite", "database"]
categories = ["development-tools", "database"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }

ta-db-overlay = { path = "../ta-db-overlay", version = "0.15.19-alpha.4.3" }
ta-db-proxy = { path = "../ta-db-proxy", version = "0.15.19-alpha.4.3" }

[dev-dependencies]
tempfile = { workspace = true }
