[package]
name = "ta-db-proxy"
version.workspace = true
edition = "2021"
description = "DbProxyPlugin trait for database proxy governance in Trusted Autonomy"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

ta-db-overlay = { path = "../ta-db-overlay" }
