[package]
name = "ta-events"
version.workspace = true
edition = "2021"
description = "Event system and subscription API for Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
