[package]
name = "ta-goal"
version = "0.4.4-alpha"
edition = "2021"
description = "GoalRun lifecycle management and event dispatch for Trusted Autonomy"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
