[package]
name = "ta-mcp-gateway"
version.workspace = true
edition = "2021"
description = "MCP gateway server with policy enforcement for Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "mcp", "gateway"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }

# Internal crates
ta-audit = { path = "../ta-audit", version = "0.15.24-alpha.2" }
ta-events = { path = "../ta-events", version = "0.15.24-alpha.2" }
ta-memory = { path = "../ta-memory", version = "0.15.24-alpha.2" }
ta-changeset = { path = "../ta-changeset", version = "0.15.24-alpha.2" }
ta-connector-fs = { path = "../ta-connectors/fs", version = "0.15.24-alpha.2" }
ta-connector-unreal = { path = "../ta-connectors/unreal", version = "0.15.24-alpha.2" }
ta-connector-comfyui = { path = "../ta-connectors/comfyui", version = "0.15.24-alpha.2" }
ta-connector-unity = { path = "../ta-connectors/unity", version = "0.15.24-alpha.2" }
ta-goal = { path = "../ta-goal", version = "0.15.24-alpha.2" }
ta-policy = { path = "../ta-policy", version = "0.15.24-alpha.2" }
ta-workspace = { path = "../ta-workspace", version = "0.15.24-alpha.2" }
ta-workflow = { path = "../ta-workflow", version = "0.15.24-alpha.2" }
ta-actions = { path = "../ta-actions", version = "0.15.24-alpha.2" }
ta-submit = { path = "../ta-submit", version = "0.15.24-alpha.2" }


[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
