[package]
name = "ta-mediation"
version = "0.6.0-alpha"
edition = "2021"
description = "Resource mediation trait — generalizes the staging pattern from files to any resource"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Workspace crates for FsMediator
ta-workspace = { path = "../ta-workspace" }
ta-changeset = { path = "../ta-changeset" }

[dev-dependencies]
tempfile = { workspace = true }
