[package]
name = "ta-mediation"
version.workspace = true
edition = "2021"
description = "Resource mediation trait — generalizes the staging pattern from files to any resource"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "mediation", "staging"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Workspace crates for FsMediator
ta-workspace = { path = "../ta-workspace", version = "0.15.17-alpha" }
ta-changeset = { path = "../ta-changeset", version = "0.15.17-alpha" }

[dev-dependencies]
tempfile = { workspace = true }
